add sync-panes toggle key for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,20 +29,22 @@ bind-key -n F6 detach
 # using F8 to rename the panel
 bind-key -n F8 command-prompt -p "(rename-window) " "rename-window '%%'"
 
-# Enable mouse support in ~/.tmux.conf
-#Mouse works as expected, using F7 to enable it and S-F7 to disable it.
+# Mouse works as expected, using F7 to enable it and S-F7 to disable it.
+# Note: when mouse is on, hold ALT to select the text during scrolling
 set -g mouse on
 bind-key -n F7 set -g mouse on \; \
         display-message "Mouse: ENABLED"
 bind-key -n S-F7 setw -g mouse off \; \
         display-message "Mouse: DISABLED"
 
+bind-key -n F10 setw synchronize-panes\;\
+    display "Sync-panes: #{?synchronize-panes,ON,OFF}"
 
 ##************ End of Function Keys Binding ***************##
 
 
 ##------- VIM friendly key bindings---------##
-#Prefix is Ctrl-a
+# Note: Prefix is Ctrl-a !!!
 set -g prefix C-a
 bind C-a send-prefix
 unbind C-b
@@ -61,10 +63,12 @@ set -g status-keys vi
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+#bind -t vi-copy 'v' begin-selection
+#bind -t vi-copy 'y' copy-selection
 #bind -t vi-copy 'Space' halfpage-down
 #bind -t vi-copy 'Bspace' halfpage-up
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-selection
 
 # Only works on Linux. TODO: use tmux-plugins/tmux-yank
 # extra commands for interacting with the ICCCM clipboard
@@ -102,6 +106,9 @@ bind -r L resize-pane -R 5
 set -g @plugin 'tmux-plugins/tpm'
 
 # tmux-continuum
+# Key bindings
+#	prefix + Ctrl-s - save
+#	prefix + Ctrl-r - restore
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
